api shared - add project with mediatr and cqrs

--- a/HappyDart.Application/HappyDart.Application.csproj
+++ b/HappyDart.Application/HappyDart.Application.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HappyDart.Api.Shared\HappyDart.Api.Shared.csproj" />
+    <ProjectReference Include="..\HappyDart.Domain\HappyDart.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
